All bugs fixed, summary table clears out after every transaction and the modal price view covers the entire width of the table under any screen size

--- a/style.css
+++ b/style.css
@@ -426,14 +426,11 @@ color: snow;
         footer .foot-note{
             margin-left: 20%;
         }
-        .form, .summary{
-            width: 80%;
-            left:0%;
-            margin-left: 5%;
+        .modal .form, .modal .summary{
+            width: 70%;
+            left:15%;
         }
-        .form,.summary{
-            width:70%;
-        }
+        
         
     }
     @media (max-width: 650px){
@@ -523,6 +520,9 @@ color: snow;
         }
         .shop-button{
             width:40%;
+            font-size: 15px;
+        }
+        .about p{
             font-size: 15px;
         }
         footer .logo p{
